src/components/ProductManager/style.css
.subtag {
  /* border: 1px solid #999999;
  padding-left: 1em;
  padding-right: 1em;
  color: white;
  margin-left: 14px;
  width: 100px;
  background-color: #999999;
  border-radius: 4px; */
  border: 1px solid #999999;
  /* padding-left: 0em;
  padding-right: 1em; */
  /* padding: 3px; */
  color: white;
  margin-left: 10px;
  padding-top: 2px;
  padding-bottom: 0px;
  /* margin-top: 10px; */
  width: 100px;
  background-color: #999999;
  border-radius: 4px;
}

.resetlink {
  color: rgb(52, 143, 226);
  cursor: pointer;
  margin-top: 2.4em;
  font-size: 17px;
}

/* NEW SUB TAG*/
.masterStackDiv {
  width: auto;
  background-color: transparent;
  border: none;
  display: flex;
  align-items: center;
}
.stackInput input[type="text"] {
  border: none;
  background-color: transparent;
  color: black;
  font-family: "Segoe UI";
  font-size: 0.8em;
  float: right;
  margin-left: 5px;
  width: auto;
  /* border-bottom: 2px solid black; */
}

.stackTag {
  background-color: #707070;
  color: white;
  height: 20px;
  width: auto;
  border-radius: 10px;
  font-size: 0.7em;
  padding: 5px;
  margin: 3px;
  display: flex;
  align-items: center;
}

.stackTags {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 30px;
  width: auto;
}
.tagCloseBtn {
  border: none;
  background-color: transparent;
  border-radius: 5px;
}
/* .tagCloseBtn:hover {
  background-color: white;
  cursor: pointer;
} */

